cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(reconstruction_work)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(segmentation segmentation.cpp)
add_executable(extraction extract.cpp)
add_executable(planar_segmentation planar_segmentation.cpp)
add_executable(feature_extraction NARF_feature_extraction.cpp)
target_link_libraries(segmentation ${PCL_LIBRARIES})
target_link_libraries(extraction ${PCL_LIBRARIES})
target_link_libraries(planar_segmentation ${PCL_LIBRARIES})
target_link_libraries(feature_extraction ${PCL_LIBRARIES})
